# 3D-renderer-from-Scratch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.cpp
include/: vector.hpp
src/: main.cpp
src/application/: Application.cpp  Application.h
src/core/: Linalg.h  SpscQueue.h  Utils.h  matrix.h  vector.h
src/exceptions/: Except.cpp  Except.h
src/geometry/: Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
src/light/: AmbientLight.cpp  AmbientLight.h  Color.cpp  Color.h  DirectionalLight.cpp  DirectionalLight.h  Material.cpp  Material.h
src/loaders/: ObjLoader.cpp  ObjLoader.h
src/rendering/: FrameBuffer.cpp  FrameBuffer.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h
src/ui/: Command.h  ConsoleInterface.cpp  ConsoleInterface.h
src/world/: Camera.cpp  Camera.h  Object.cpp  Object.h  World.cpp  World.h
